Removed old bootstrap hotlink and referenced local copy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ page.meta_description }}">
     <meta name="keywords" content="{{ page.meta_keywords }}" />
     <meta name="google-site-verification" content="AU2WGXIWwLDomeI45iRYfLSIjqRnrNJ3FWJqEQwsqxA" />
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.2.0.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/styles.css" type="text/css" />
   </head>
   <body style="padding-top: 40px;">
