Add a link to LinkedIn profile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
           </p>
           <a href="http://twitter.com/gary_rafferty">Twitter</a> | 
           <a href="http://flickr.com/gary_rafferty">Flickr</a> | 
-          <a href="http://github.com/gary-rafferty">Github</a><br />
+          <a href="http://github.com/gary-rafferty">Github</a> | 
+          <a href="http://ie.linkedin.com/in/raffertygary/">LinkedIn</a><br />
         </div>
       </div>
     </div>
