--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,2 +1,11 @@
 <link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0SVTN5FPFP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0SVTN5FPFP');
+</script>
